--- a/index.html
+++ b/index.html
@@ -23,7 +23,22 @@
   </head>
   <body>
     <main>
+      <div class="overlay_bg--block">
+        <img src="./assets/img/deco/overlay_bg.jpg" alt="" />
+      </div>
       <div class="wrapper">
+        <div class="lang-wrap">
+          <button class="lang-select">
+            <span class="current-lang">한국어</span>
+            <span class="arrow"></span>
+          </button>
+
+          <ul class="lang-dropdown">
+            <li data-lang="ko">한국어</li>
+            <li data-lang="en">영어 (미국)</li>
+            <li data-lang="jp">일본어</li>
+          </ul>
+        </div>
         <section class="sec1">
           <div class="img--block">
             <img src="./assets/img/bg01.jpg" alt="sec1_bg" />
@@ -77,7 +92,6 @@
             </div>
           </div>
         </section>
-
         <!-- 홍보 영상 -->
         <section id="sec2" class="sec2">
           <div class="img--block">
@@ -101,7 +115,6 @@
           <a class="link-pin" href="#link1" style="top: 7.9%; height: 16.5%; left: 50%; width: 51%"> </a>
           <a class="link-pin" href="#link1" style="top: 27.7%; height: 16.5%; left: 50%; width: 51%"> </a>
         </section>
-
         <!-- 9zone -->
         <section id="sec3" class="sec3">
           <div class="img--block">
@@ -117,68 +130,75 @@
               <img src="./assets/img/deco/sec2_ball_01.png" alt="" />
             </div>
           </div>
-          <div class="link-pin" style="top: 20%; height: 45%; left: 50%; width: 70%">
+          <div class="link-pin" style="top: 18%; height: 45%; left: 50%; width: 70%">
             <div class="swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <a href="zone7.html" target="_blank" class="swiper--link">
-                    <div class="img--block">img</div>
+                    <div class="img--block"><img src="./assets/img/place/img_place_01.jpg" alt="" /></div>
                     <h3 class="title">장충동</h3>
                     <p class="desc">우리가 몰랐던 리얼 <span>장충</span></p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone5.html" target="_blank" class="swiper--link">
-                    <div class="img--block">img</div>
+                    <div class="img--block"><img src="./assets/img/place/img_place_02.jpg" alt="" /></div>
                     <h3 class="title">필동</h3>
                     <p class="desc"><span>필</span>름처럼 새겨지는 감성<span>동</span>네</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone2.html" target="_blank" class="swiper--link">
-                    <div class="img--block">img</div>
+                    <div class="img--block"><img src="./assets/img/place/img_place_03.jpg" alt="" /></div>
+
                     <h3 class="title">을지로</h3>
                     <p class="desc">옛것<span>을</span> <span>지</span>금으<span>로</span></p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone8.html" target="_blank" class="swiper--link">
-                    <div class="img--block">img</div>
+                    <div class="img--block"><img src="./assets/img/place/img_place_04.jpg" alt="" /></div>
+
                     <h3 class="title">회현동</h3>
                     <p class="desc">기<span>회</span>를 <span>현</span>재로 일구어낸 동네</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone1.html" target="_blank" class="swiper--link">
-                    <div class="img--block">img</div>
+                    <div class="img--block"><img src="./assets/img/place/img_place_05.jpg" alt="" /></div>
+
                     <h3 class="title">신당동</h3>
                     <p class="desc"><span>신</span>묘하게 힙하<span>당</span> 힙당동</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone6.html" target="_blank" class="swiper--link">
-                    <div class="img--block">img</div>
+                    <div class="img--block"><img src="./assets/img/place/img_place_06.jpg" alt="" /></div>
+
                     <h3 class="title">소공동</h3>
                     <p class="desc">서울<span>소</span>울 피어나는 성<span>공</span>로드</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone4.html" target="_blank" class="swiper--link">
-                    <div class="img--block">img</div>
+                    <div class="img--block"><img src="./assets/img/place/img_place_07.jpg" alt="" /></div>
+
                     <h3 class="title">명동</h3>
                     <p class="desc"><span>명</span>성답게 빛나는 <span>동</span>네</p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone3.html" target="_blank" class="swiper--link">
-                    <div class="img--block">img</div>
+                    <div class="img--block"><img src="./assets/img/place/img_place_08.jpg" alt="" /></div>
+
                     <h3 class="title">중림동</h3>
                     <p class="desc">소<span>중</span>히 마음에 담는 그<span>림</span></p>
                   </a>
                 </div>
                 <div class="swiper-slide">
                   <a href="zone9.html" target="_blank" class="swiper--link">
-                    <div class="img--block">img</div>
+                    <div class="img--block"><img src="./assets/img/place/img_place_09.jpg" alt="" /></div>
+
                     <h3 class="title">광희동</h3>
                     <p class="desc">세계가 열<span>광</span>하는 환<span>희</span>의 빛</p>
                   </a>
@@ -193,7 +213,6 @@
             </div>
           </div>
         </section>
-
         <!-- playground jung-gu -->
         <section id="sec4" class="sec4">
           <div class="img--block">
@@ -242,7 +261,6 @@
               </div>
               <!-- <div class="swiper-pagination"></div> -->
 
-              
               <!-- <div class="swiper-scrollbar"></div> -->
             </div>
             <div class="swiper-button-prev btn prev"></div>
@@ -282,7 +300,28 @@
         // );
 
         // observer.observe(sec1);
+        const langSelect = document.querySelector(".lang-select");
+        const dropdown = document.querySelector(".lang-dropdown");
+        const currentLang = document.querySelector(".current-lang");
 
+        langSelect.addEventListener("click", () => {
+          dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
+        });
+
+        // 언어 선택
+        document.querySelectorAll(".lang-dropdown li").forEach((item) => {
+          item.addEventListener("click", () => {
+            currentLang.textContent = item.textContent;
+            dropdown.style.display = "none";
+          });
+        });
+
+        // 바깥 클릭 시 닫기
+        document.addEventListener("click", (e) => {
+          if (!e.target.closest(".lang-wrap")) {
+            dropdown.style.display = "none";
+          }
+        });
         const swipersec3 = new Swiper(".sec3 .swiper", {
           loop: true,
           observer: true, // ← DOM 변화 감지
@@ -314,7 +353,7 @@
             // 576px ~ 1023px → 슬라이드 3개씩
             576: {
               slidesPerView: 3,
-              spaceBetween: 10,
+              spaceBetween: 5,
               enabled: true,
             },
 
