--- a/zone3.html
+++ b/zone3.html
@@ -13,74 +13,52 @@
       <div class="wrapper">
         <section class="sec1">
           <div class="img--block">
-            <img src="/assets/img/zone3_img/sec1_main_img.png" alt="" />
+            <img src="/assets/img/zone3_img/sec1_main_img.png" alt="소중히 마음에 담는그림" />
           </div>
-          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
+          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
         </section>
 
         <div class="sec2">
           <div class="img--block">
-            <img src="/assets/img/zone3_img/sec2_img01.png" alt="" />
+            <img src="/assets/img/zone3_img/sec2_img01.png" alt="중림동 플레이맵 코스소개" />
           </div>
 
           <div class="sec2-main--content">
-            <img src="/assets/img/zone3_img/sec2_main_img.png" alt="" />
+            <img src="/assets/img/zone3_img/sec2_main_img.png" alt="종교를 초월한 우리의 역사 짧은 순례길 탐방" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="서소문성지 역사박물관" style="top: 51%; height: 12%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="중림동 약현성당" style="top: 51%; height: 12%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="가톨릭 출판사" style="top: 64%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="성요셉 아파트" style="top: 76%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="드로우 에스프레소바" style="top: 76%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 89.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/FQyFFDQp" aria-label="코스 확인하기" style="top: 89.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec3">
           <div class="img--block">
-            <img src="/assets/img/zone3_img/sec3_main_img.png" alt="" />
+            <img src="/assets/img/zone3_img/sec3_main_img.png" alt="오랜 역사 위에 새로움을 입고 기품있게 태어난 동네" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="중림창고, 여기서울149쪽" style="top: 47%; height: 13%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="커피방앗간" style="top: 55%; height: 12%; left: 70%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="서울형 키즈카페 노리몽땅 중림점 중림동장난감도서관" style="top: 64%; height: 15%; left: 30%; width: 43%"> </a>
-          <a class="link-pin" href="#link1" aria-label="서울로7017, 만리동광장" style="top: 74%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/GwSQQZsx" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec4">
           <div class="img--block">
-            <img src="/assets/img/zone3_img/sec4_main_img.png" alt="" />
+            <img src="/assets/img/zone3_img/sec4_main_img.png" alt="이토록 매력적인 '중림+만리' 1박 2일" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="이조식당" style="top: 47%; height: 12%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="중림재" style="top: 47%; height: 12%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="베리키친" style="top: 61%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="더하우스1932" style="top: 75%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="손기정체육공원" style="top: 75%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/FLeggZ7Y" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec5">
           <div class="img--block">
-            <img src="/assets/img/zone3_img/sec5_main_img.png" alt="" />
+            <img src="/assets/img/zone3_img/sec5_main_img.png" alt="과거와 현재가 어우러지는 하루 반나절의 타임슬립" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="칠패시장 터" style="top: 46%; height: 13%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="염천교수제화거리" style="top: 55%; height: 12%; left: 70%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="중림장설렁탕" style="top: 65%; height: 12%; left: 28%; width: 43%"> </a>
-          <a class="link-pin" href="#link1" aria-label="윤슬 서울을 비추는 만리동" style="top: 74%; height: 13%; left: 70%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/GUmNNBIs" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec6">
           <div class="img--block">
-            <img src="/assets/img/zone3_img/sec6_main_img.png" alt="" />
+            <img src="/assets/img/zone3_img/sec6_main_img.png" alt="어떤 드라마라도 착붙 배경이 된다" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="중임동 약현성당" style="top: 48.8%; height: 13%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="고산자 김정호 집터" style="top: 57%; height: 13%; left: 70%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="호박마을" style="top: 67.6%; height: 13%; left: 28%; width: 43%"> </a>
-          <a class="link-pin" href="#link1" aria-label="손기정기념관" style="top: 77.6%; height: 13%; left: 70%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 92.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/F2nDD3bH" aria-label="코스 확인하기" style="top: 92.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="close--btn">
           <div class="img--block">
-            <img src="/assets/img/zone3_img/close_img.png" alt="" />
+            <img src="/assets/img/zone3_img/close_img.png" alt="닫기" />
           </div>
-          <a class="link-pin close--link" href="#link1" aria-label="링크 6" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
+          <a class="link-pin close--link" href="/index.html" aria-label="링크 6" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
       </div>
     </main>
