--- a/zone5.html
+++ b/zone5.html
@@ -13,77 +13,52 @@
       <div class="wrapper">
         <section class="sec1">
           <div class="img--block">
-            <img src="/assets/img/zone5_img/sec1_main_img.png" alt="" />
+            <img src="/assets/img/zone5_img/sec1_main_img.png" alt="필름처럼 새겨지는 감성동네" />
           </div>
-          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
+          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
         </section>
 
         <div class="sec2">
           <div class="img--block">
-            <img src="/assets/img/zone5_img/sec2_img01.png" alt="" />
+            <img src="/assets/img/zone5_img/sec2_img01.png" alt="필동 플레이맵 코스소개" />
           </div>
 
           <div class="sec2-main--content">
-            <img src="/assets/img/zone5_img/sec2_main_img.png" alt="" />
+            <img src="/assets/img/zone5_img/sec2_main_img.png" alt="1392에서 2394까지 천 년을 넘나드는 시간 여행" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="교서관 터" style="top: 51%; height: 12%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="한국의집" style="top: 51%; height: 12%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="남산골한옥마을" style="top: 64%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="충무로 한옥카페달강" style="top: 76.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="서울천년 타임캡슐광장" style="top: 76.6%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 89.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/GkU1b7Lp" aria-label="코스 확인하기" style="top: 89.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec3">
           <div class="img--block">
-            <img src="/assets/img/zone5_img/sec3_main_img.png" alt="" />
+            <img src="/assets/img/zone5_img/sec3_main_img.png" alt="풍류와 낭만을 아는 'Feel동' 힙스터" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="충무로영상센터오재미동" style="top: 46.6%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="(구)대한극장" style="top: 46.6%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="오길칠비스트로" style="top: 61%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="아트스페이스노" style="top: 74.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="몽트" style="top: 74.6%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/FSSsWPSf" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec4">
           <div class="img--block">
-            <img src="assets/img/zone5_img/sec4_main_img.png" alt="" />
+            <img src="assets/img/zone5_img/sec4_main_img.png" alt="나도 잘 몰랐던 나를 위한 취향의 발견" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="그릴데미그라스" style="top: 46.6%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="아이엔티이 쇼룸" style="top: 46.6%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="커피인쇄소" style="top: 61%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="고래사진관 현상소" style="top: 74.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="SCENT MOMO" style="top: 74.6%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/5wNs7kmA" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec5">
           <div class="img--block">
-            <img src="assets/img/zone5_img/sec5_main_img.png" alt="" />
+            <img src="assets/img/zone5_img/sec5_main_img.png" alt="필동 비기너를 위한 필수 추천 코스" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="서애로&류성룡 집터" style="top: 46.6%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="필동면옥" style="top: 46.6%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="마프" style="top: 61%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="헤베커피" style="top: 74.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="라비두스" style="top: 74.6%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/FdoZzH3i" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec6">
           <div class="img--block">
-            <img src="assets/img/zone5_img/sec6_main_img.png" alt="" />
+            <img src="assets/img/zone5_img/sec6_main_img.png" alt="붓 대신 스마트폰 들고 필동의 하루를 담는다" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="카페허블&남산책방" style="top: 48.6%; height: 14%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코코너즘" style="top: 48.6%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="라프리마베라" style="top: 63.6%; height: 13%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="필동함박" style="top: 77.6%; height: 13%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="감나무사진관" style="top: 77.6%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 92.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/xoQWfJBZ" aria-label="코스 확인하기" style="top: 92.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="close--btn">
           <div class="img--block">
-            <img src="assets/img/zone5_img/close_img.png" alt="" />
+            <img src="assets/img/zone5_img/close_img.png" alt="닫기" />
           </div>
-          <a class="link-pin close--link" href="#link1" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
+          <a class="link-pin close--link" href="/index.html" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
       </div>
     </main>
