--- a/zone6.html
+++ b/zone6.html
@@ -13,78 +13,52 @@
       <div class="wrapper">
         <section class="sec1">
           <div class="img--block">
-            <img src="/assets/img/zone6_img/sec1_main_img.png" alt="" />
+            <img src="/assets/img/zone6_img/sec1_main_img.png" alt="서울소울 피어나는 성공로드" />
           </div>
           <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
         </section>
 
         <div class="sec2">
           <div class="img--block">
-            <img src="/assets/img/zone6_img/sec2_img01.png" alt="" />
+            <img src="/assets/img/zone6_img/sec2_img01.png" alt="소공동 플레이맵 코스소개" />
           </div>
 
           <div class="sec2-main--content">
-            <img src="/assets/img/zone6_img/sec2_main_img.png" alt="" />
+            <img src="/assets/img/zone6_img/sec2_main_img.png" alt="덕수궁 돌담길은 언제나 옳아!" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="경운궁 양이재" style="top: 51%; height: 12%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="덕수궁 리에제와플" style="top: 51%; height: 12%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="정동전망대" style="top: 64%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="덕수정" style="top: 76.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="카페 소포라" style="top: 76.6%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 89.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/GHY3n5Fl" aria-label="코스 확인하기" style="top: 89.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec3">
           <div class="img--block">
-            <img src="/assets/img/zone6_img/sec3_main_img.png" alt="" />
+            <img src="/assets/img/zone6_img/sec3_main_img.png" alt="격동의 시대 근대의 거리를 걷다" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="고종의길" style="top: 46%; height: 13%; left: 27%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="구러시아공사관" style="top: 46%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="서울특별시청" style="top: 60%; height: 13%; left: 27%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="덕수궁중명전" style="top: 60%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="환구단본단터" style="top: 74%; height: 13%; left: 27%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="스타벅스 환구단점" style="top: 74%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/xbjZIv2m" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec4">
           <div class="img--block">
-            <img src="assets/img/zone6_img/sec4_main_img.png" alt="" />
+            <img src="/assets/img/zone6_img/sec4_main_img.png" alt="도시를 걷는 낭만가의 소공+정동 건축 기행" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="서울 구 신아일보별관" style="top: 46.6%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="정동제일교회" style="top: 46.6%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="구세군역사박물관" style="top: 61%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="대한성공회 서울주교좌성당" style="top: 74.6%; height: 13%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="서울도시건축전시관" style="top: 74.6%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/x6xRXBa8" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec5">
           <div class="img--block">
-            <img src="assets/img/zone6_img/sec5_main_img.png" alt="" />
+            <img src="/assets/img/zone6_img/sec5_main_img.png" alt="그저 걸었을 뿐인데 예술이 따라왔다" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="정동1928 아트센터" style="top: 46%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="국립정동극장" style="top: 46%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="서울시립미술관" style="top: 61%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="라이크디즈1601" style="top: 74.6%; height: 13%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="아지트 누리다" style="top: 74.6%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/GreZdVf1" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec6">
           <div class="img--block">
-            <img src="assets/img/zone6_img/sec6_main_img.png" alt="" />
+            <img src="/assets/img/zone6_img/sec6_main_img.png" alt="소공지앵, 소공동만의 감성을 아는 사람들" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="마이시크릿덴" style="top: 48.6%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="오드하우스" style="top: 48.6%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="소일베이커 정동길" style="top: 63.6%; height: 13%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="마이초이스 정동" style="top: 77.6%; height: 13%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="정동 독립맥주공장" style="top: 77.6%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 92.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/FAPEwvs2" aria-label="코스 확인하기" style="top: 92.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="close--btn">
           <div class="img--block">
-            <img src="assets/img/zone6_img/close_img.png" alt="" />
+            <img src="/assets/img/zone6_img/close_img.png" alt="닫기" />
           </div>
-          <a class="link-pin close--link" href="#link1" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
+          <a class="link-pin close--link" href="/index.html" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
       </div>
     </main>
