--- a/zone8.html
+++ b/zone8.html
@@ -13,79 +13,52 @@
       <div class="wrapper">
         <section class="sec1">
           <div class="img--block">
-            <img src="/assets/img/zone8_img/sec1_main_img.png" alt="" />
+            <img src="/assets/img/zone8_img/sec1_main_img.png" alt="기회를 현재로 일구어낸" />
           </div>
-          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
+          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
         </section>
 
         <div class="sec2">
           <div class="img--block">
-            <img src="/assets/img/zone8_img/sec2_img01.png" alt="" />
+            <img src="/assets/img/zone8_img/sec2_img01.png" alt="회현동 플레이맵 코스소개" />
           </div>
 
           <div class="sec2-main--content">
-            <img src="/assets/img/zone8_img/sec2_main_img.png" alt="" />
+            <img src="/assets/img/zone8_img/sec2_main_img.png" alt="서울, 도성의 문에서 시작되다" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="숭례문" style="top: 51%; height: 12%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="선혜청 터" style="top: 51%; height: 12%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="남대문 수입상가(C,D,E동 지하)" style="top: 64%; height: 12%; left: 50%; width: 57%"> </a>
-          <a class="link-pin" href="#link1" aria-label="희락갈치" style="top: 76.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="가배도 남대문시장점" style="top: 76.6%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 89.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/xbjZwh9D" aria-label="코스 확인하기" style="top: 89.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec3">
           <div class="img--block">
-            <img src="/assets/img/zone8_img/sec3_main_img.png" alt="" />
+            <img src="/assets/img/zone8_img/sec3_main_img.png" alt="집중 공략! 남대문시장 핵심 포인트" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="남해식당" style="top: 46%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="남대문 꽃 종합상가" style="top: 46%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="중앙상가" style="top: 60%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="남대문 종합상가" style="top: 60%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="남대문 야채호떡" style="top: 74%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="문구Art박물관" style="top: 74%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/5tfijopX" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec4">
           <div class="img--block">
-            <img src="assets/img/zone8_img/sec4_main_img.png" alt="" />
+            <img src="/assets/img/zone8_img/sec4_main_img.png" alt="드라마 속 그 장면으로 지금 들어 갑니다!" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="1922 원조 남산돈까스" style="top: 46.6%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="회현시민아파트" style="top: 46.6%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="삼순이 계단" style="top: 61%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="안중근의사 기념관" style="top: 74.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="안중근의사 유목" style="top: 74.6%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/GBvKfbEr" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec5">
           <div class="img--block">
-            <img src="assets/img/zone8_img/sec5_main_img.png" alt="" />
+            <img src="/assets/img/zone8_img/sec5_main_img.png" alt="#트잘알이 추천하는 회현동 잇 플레이스" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="피크닉" style="top: 46.6%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="회현식당" style="top: 46.6%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="스틸북스 회현" style="top: 61%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="남촌가주" style="top: 74.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="구덴구덴" style="top: 74.6%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/Ig4QT8pv" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec6">
           <div class="img--block">
-            <img src="assets/img/zone8_img/sec6_main_img.png" alt="" />
+            <img src="/assets/img/zone8_img/sec6_main_img.png" alt="가족, 연인, 친구 누구랑 와도 기억에 남을 남촌길" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="회현동 은행나무" style="top: 48%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="정광필 집터" style="top: 48%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="젤라떼리아 징코" style="top: 63%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="오베흐트" style="top: 63%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="GLGK" style="top: 77.5%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="유가" style="top: 77.5%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 92.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/5cqBTGfa" aria-label="코스 확인하기" style="top: 92.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="close--btn">
           <div class="img--block">
-            <img src="assets/img/zone8_img/close_img.png" alt="" />
+            <img src="/assets/img/zone8_img/close_img.png" alt="" />
           </div>
-          <a class="link-pin close--link" href="#link1" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
+          <a class="link-pin close--link" href="/index.html" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
       </div>
     </main>
