--- a/zone9.html
+++ b/zone9.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>합당동</title>
+    <title>광희동 플레이맵</title>
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/common.css" />
@@ -13,77 +13,52 @@
       <div class="wrapper">
         <section class="sec1">
           <div class="img--block">
-            <img src="/assets/img/zone9_img/sec1_main_img.png" alt="" />
+            <img src="/assets/img/zone9_img/sec1_main_img.png" alt="세계가 열광하는 환희의빛" />
           </div>
-          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
+          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
         </section>
 
         <div class="sec2">
           <div class="img--block">
-            <img src="/assets/img/zone9_img/sec2_img01.png" alt="" />
+            <img src="/assets/img/zone9_img/sec2_img01.png" alt="광희동 플레이맵 코스소개" />
           </div>
 
           <div class="sec2-main--content">
-            <img src="/assets/img/zone9_img/sec2_main_img.png" alt="" />
+            <img src="/assets/img/zone9_img/sec2_main_img.png" alt="DDP만 랜드마크가 아니라고! 지금 주목해야 할 공간들" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="동대문 디자인플라자" style="top: 51%; height: 12%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="와글와글 베이크샵" style="top: 51%; height: 12%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="퍼플러" style="top: 64%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="쿠엔즈버킷" style="top: 76.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="Projec D" style="top: 76.6%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 89.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/IxK6uvsl" aria-label="코스 확인하기" style="top: 89.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec3">
           <div class="img--block">
-            <img src="/assets/img/zone9_img/sec3_main_img.png" alt="" />
+            <img src="/assets/img/zone9_img/sec3_main_img.png" alt="서울에서 가장 알찬 K-패션 쇼핑의 성지" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="순미네행복게장" style="top: 46.6%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="동대문패션타운" style="top: 46.6%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="청계천 헌책방 거리" style="top: 61%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="멜란지 무드" style="top: 74.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="광희패션몰" style="top: 74.6%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/xrC9WK2V" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec4">
           <div class="img--block">
-            <img src="assets/img/zone9_img/sec4_main_img.png" alt="" />
+            <img src="/assets/img/zone9_img/sec4_main_img.png" alt="중앙아시아를 오롯이 품은 당찬 골목 탐험" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="중앙아시아거리" style="top: 46.6%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="러시아케익" style="top: 46.6%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="스타사마르칸트" style="top: 61%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="탄드르" style="top: 74.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="파르투내푸드" style="top: 74.6%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/xAAEELhF" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec5">
           <div class="img--block">
-            <img src="assets/img/zone9_img/sec5_main_img.png" alt="" />
+            <img src="/assets/img/zone9_img/sec5_main_img.png" alt="맛잘알 단골들의 참새방앗간 인현시장 투어" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="인현시장" style="top: 46%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="우리식당" style="top: 46%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="칠갑산" style="top: 61%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="그래서그랬어" style="top: 74.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="재해석" style="top: 74.6%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/FivttFWL" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec6">
           <div class="img--block">
-            <img src="assets/img/zone9_img/sec6_main_img.png" alt="" />
+            <img src="/assets/img/zone9_img/sec6_main_img.png" alt="아침부터 저녁까지 광희동에서의 꽉찬 하루" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="페인트커피앤바을지로점" style="top: 48.6%; height: 14%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="오장동흥남집본점" style="top: 48.6%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="디휘테" style="top: 63.6%; height: 13%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="중부시장" style="top: 77.6%; height: 13%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="훈련원공원" style="top: 77.6%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 92.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/FivttFWL" aria-label="코스 확인하기" style="top: 92.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="close--btn">
           <div class="img--block">
-            <img src="assets/img/zone9_img/close_img.png" alt="" />
+            <img src="/assets/img/zone9_img/close_img.png" alt="닫기" />
           </div>
-          <a class="link-pin close--link" href="#link1" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
+          <a class="link-pin close--link" href="/index.html" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
       </div>
     </main>
