--- a/zone1.html
+++ b/zone1.html
@@ -13,75 +13,52 @@
       <div class="wrapper">
         <section class="sec1">
           <div class="img--block">
-            <img src="./assets/img/zone1_img/sec1_main_img.png" alt="" />
+            <img src="./assets/img/zone1_img/sec1_main_img.png" alt="신묘하게 힙하당" />
           </div>
-          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
+          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
         </section>
 
         <section class="sec2">
           <div class="img--block">
-            <img src="./assets/img/zone1_img/sec2_img01.png" alt="" />
+            <img src="./assets/img/zone1_img/sec2_img01.png" alt="힙당동 플레이맵 코스소개" />
           </div>
 
           <div class="sec2-main--content">
-            <img src="/assets/img/zone1_img/sec2_main_img.png" alt="" />
+            <img src="/assets/img/zone1_img/sec2_main_img.png" alt="어쨌거나, 떡볶이가 먹고 싶다면" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="링크 1" style="top: 51%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 2" style="top: 59%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 3" style="top: 68%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 4" style="top: 76%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 5" style="top: 89.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/xE6KOZPz" aria-label="링크 5" style="top: 89.6%; height: 3%; left: 50%; width: 77%"> </a>
         </section>
 
         <section class="sec3">
           <div class="img--block">
-            <img src="/assets/img/zone1_img/sec3_main_img.png" alt="" />
+            <img src="/assets/img/zone1_img/sec3_main_img.png" alt="힙스터스 파라다이스" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="링크 1" style="top: 47%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 2" style="top: 55%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 3" style="top: 66%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 4" style="top: 74%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 5" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/FytjsdWu" aria-label="링크 5" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </section>
 
         <section class="sec4">
           <div class="img--block">
-            <img src="assets/img/zone1_img/sec4_main_img.png" alt="" />
+            <img src="assets/img/zone1_img/sec4_main_img.png" alt="낮도 밤도 매력적 서울 신중앙시장" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="링크 1" style="top: 47%; height: 12%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 2" style="top: 47%; height: 12%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 3" style="top: 61%; height: 12%; left: 52%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 4" style="top: 74%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 5" style="top: 74%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 6" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/FnV3BdMV" aria-label="링크 6" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </section>
         <section class="sec5">
           <div class="img--block">
-            <img src="assets/img/zone1_img/sec5_main_img.png" alt="" />
+            <img src="assets/img/zone1_img/sec5_main_img.png" alt="최대 양곡시장이 최고 핫플로 싸전거리 바이브" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="링크 1" style="top: 47%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 2" style="top: 55%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 3" style="top: 66%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 4" style="top: 74%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 5" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/5R45n3NL" aria-label="링크 5" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </section>
         <section class="sec6">
           <div class="img--block">
-            <img src="assets/img/zone1_img/sec6_main_img.png" alt="" />
+            <img src="assets/img/zone1_img/sec6_main_img.png" alt="아침부터 저녁까지 광희동에서의 꽉찬 하루" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="링크 1" style="top: 49%; height: 12%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 2" style="top: 49%; height: 12%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 3" style="top: 63%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 3" style="top: 63%; height: 14%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 4" style="top: 78%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 5" style="top: 78%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="링크 6" style="top: 92.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/GDLyBGpZ" aria-label="링크 6" style="top: 92.6%; height: 3%; left: 50%; width: 77%"> </a>
         </section>
         <div class="close--btn">
           <div class="img--block">
-            <img src="assets/img/zone1_img/close_img.png" alt="" />
+            <img src="assets/img/zone1_img/close_img.png" alt="닫기" />
           </div>
-          <a class="link-pin close--link" href="#link1" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
+          <a class="link-pin close--link" href="/index.html" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
       </div>
     </main>
