--- a/zone2.html
+++ b/zone2.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>을지로</title>
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/common.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/common.css" />
   </head>
   <body>
     <main>
@@ -16,73 +16,49 @@
           <div class="img--block">
             <img src="/assets/img/zone2_img/sec1_main_img.png" alt="" />
           </div>
-          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
+          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
         </section>
 
         <div class="sec2">
           <div class="img--block">
-            <img src="/assets/img/zone2_img/sec2_img01.png" alt="" />
+            <img src="/assets/img/zone2_img/sec2_img01.png" alt="을지로 플레이맵 코스소개" />
           </div>
 
           <div class="sec2-main--content">
-            <img src="/assets/img/zone2_img/sec2_main_img.png" alt="" />
+            <img src="/assets/img/zone2_img/sec2_main_img.png" alt="윤전기 소리를 BGM으로 기름 냄새 밴 거리를 걷다" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="주자소 터" style="top: 51%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="을지로 인쇄 골목" style="top: 51%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="노말에이(NOrmal A)" style="top: 64%; height: 12%; left: 49%; width: 45%"> </a>
-          <a class="link-pin" href="#link1" aria-label="움푹" style="top: 76%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="에이스포클럽" style="top: 76%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 89.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/xlbrY5Gd" aria-label="코스 확인하기" style="top: 89.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec3">
           <div class="img--block">
-            <img src="/assets/img/zone2_img/sec3_main_img.png" alt="" />
+            <img src="/assets/img/zone2_img/sec3_main_img.png" alt="다시 세운 을지로의 메카 대림상가" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="호랑이" style="top: 46.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="대림국수" style="top: 55%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="소요서가" style="top: 64.5%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="빠우" style="top: 74.6%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/GcKqqoRX" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec4">
           <div class="img--block">
-            <img src="assets/img/zone2_img/sec4_main_img.png" alt="" />
+            <img src="/assets/img/zone2_img/sec4_main_img.png" alt="을지로에서 '을지'의 의미란?" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="을지로 문덕 카페" style="top: 47%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="을지상회" style="top: 47%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="을지 장만옥, 을지깐깐" style="top: 61%; height: 12%; left: 49%; width: 45%"> </a>
-          <a class="link-pin" href="#link1" aria-label="을지OB베어" style="top: 74.5%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="을지오뎅" style="top: 74.5%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/GagwwJO4" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec5">
           <div class="img--block">
-            <img src="assets/img/zone2_img/sec5_main_img.png" alt="" />
+            <img src="/assets/img/zone2_img/sec5_main_img.png" alt="도심 근대산업의 메카 을지로의 모든 순간" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="송림수제화" style="top: 46.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="을지로 타일거리" style="top: 46.6%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="을지로 조명거리" style="top: 61%; height: 12%; left: 49%; width: 45%"> </a>
-          <a class="link-pin" href="#link1" aria-label="을지로 공구거리" style="top: 74.6%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="을지로 노가리 골목" style="top: 74.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/FHV11Qpc" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec6">
           <div class="img--block">
-            <img src="assets/img/zone2_img/sec6_main_img.png" alt="" />
+            <img src="/assets/img/zone2_img/sec6_main_img.png" alt="금손들의 천국 을지로 방산시장 나들이" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="송림수제화" style="top: 49%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="을지로 타일거리" style="top: 49%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="을지로 조명거리" style="top: 64%; height: 12%; left: 49%; width: 45%"> </a>
-          <a class="link-pin" href="#link1" aria-label="을지로 공구거리" style="top: 77%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="을지로 노가리 골목" style="top: 77%; height: 13%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 92.6%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/57QllFHY" aria-label="코스 확인하기" style="top: 92.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="close--btn">
           <div class="img--block">
-            <img src="assets/img/zone2_img/close_img.png" alt="" />
-            <a class="link-pin close--link" href="#link1" aria-label="링크 6" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
+            <img src="assets/img/zone2_img/close_img.png" alt="닫기" />
+            <a class="link-pin close--link" href="/index.html" aria-label="링크 6" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
           </div>
         </div>
       </div>
