--- a/zone4.html
+++ b/zone4.html
@@ -13,63 +13,54 @@
       <div class="wrapper">
         <section class="sec1">
           <div class="img--block">
-            <img src="/assets/img/zone4_img/sec1_main_img.png" alt="" />
+            <img src="/assets/img/zone4_img/sec1_main_img.png" alt="명성답게 빛나는 동네" />
           </div>
-          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
+          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
         </section>
 
         <div class="sec2">
+          <span class="blind">즐겨라! 명동에 처음 온 관광객처럼</span>
           <div class="img--block">
-            <img src="/assets/img/zone4_img/sec2_img01.png" alt="" />
+            <img src="/assets/img/zone4_img/sec2_img01.png" alt="명동 플레이맵 코스소개" />
           </div>
 
           <div class="sec2-main--content">
-            <img src="/assets/img/zone4_img/sec2_main_img.png" alt="" />
+            <img src="/assets/img/zone4_img/sec2_main_img.png" alt="즐겨라! 명동에 처음 온 관광객처럼" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="바프 아몬드 스토어 명동" style="top: 51%; height: 12%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="위글위글집명동" style="top: 51%; height: 12%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="명동 거리" style="top: 64%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="도토리 캐리커쳐 명동점" style="top: 76.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="영양센터 본점" style="top: 76.6%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 89.6%; height: 3%; left: 50%; width: 77%"> </a>
-        </div>
 
+          <a class="link-pin" target="_blank" href="https://naver.me/xOdqMXz7" aria-label="코스 확인하기" style="top: 89.6%; height: 3%; left: 50%; width: 77%"> </a>
+        </div>
 
         <div class="sec3">
+          <span class="blind">외국인 친구에게 강력 추천하는 명동 코스</span>
           <div class="img--block">
-            <img src="/assets/img/zone4_img/sec3_main_img.png" alt="" />
+            <img src="/assets/img/zone4_img/sec3_main_img.png" alt="외국인 친구에게 강력 추천하는 명동 코스" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="명동아트브리즈" style="top: 47%; height: 12%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="진사댁 명동" style="top: 47%; height: 12%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="케이메카" style="top: 61%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="명동성당" style="top: 74%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="뷰티플레이" style="top: 74%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
+
+          <a class="link-pin" target="_blank" href="https://naver.me/FGEjn1yN" aria-label="" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec4">
+          <span class="blind">상상동 못 할걸 재미로에 숨은 재미</span>
+
           <div class="img--block">
-            <img src="/assets/img/zone4_img/sec4_main_img.png" alt="" />
+            <img src="/assets/img/zone4_img/sec4_main_img.png" alt="상상동 못 할걸 재미로에 숨은 재미" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="펜카페" style="top: 46.6%; height: 12%; left: 66%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="램캠프" style="top: 61%; height: 12%; left: 27%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="사유의서재 남산 와인다이닝" style="top: 74%; height: 14%; left: 66%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
+
+          <a class="link-pin" target="_blank" href="https://naver.me/FK0DXtFi" aria-label="코스 확인하기" style="top: 88.6%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec5">
+          <span class="blind">크리스마스 대표 명소 빛나는 명동을 즐기자</span>
           <div class="img--block">
-            <img src="/assets/img/zone4_img/sec5_main_img.png" alt="" />
+            <img src="/assets/img/zone4_img/sec5_main_img.png" alt="크리스마스 대표 명소 빛나는 명동을 즐기자" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="신세계백화점 본점" style="top: 48%; height: 13%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="더 스팟 패뷸러스" style="top: 58%; height: 12%; left: 70%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="명동성당" style="top: 68%; height: 12%; left: 30%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="모와 MOWa" style="top: 78%; height: 12%; left: 70%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 92.3%; height: 3%; left: 50%; width: 77%"> </a>
+
+          <a class="link-pin" target="_blank" href="https://naver.me/FMTBsl3m" aria-label="코스 확인하기" style="top: 92.3%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="close--btn">
           <div class="img--block">
-            <img src="/assets/img/zone4_img/close_img.png" alt="" />
+            <img src="/assets/img/zone4_img/close_img.png" alt="닫기" />
           </div>
-          <a class="link-pin close--link" href="#link1" aria-label="딛기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
+          <a class="link-pin close--link" href="/index.html" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
       </div>
     </main>
