--- a/zone7.html
+++ b/zone7.html
@@ -13,88 +13,58 @@
       <div class="wrapper">
         <section class="sec1">
           <div class="img--block">
-            <img src="/assets/img/zone7_img/sec1_main_img.png" alt="" />
+            <img src="/assets/img/zone7_img/sec1_main_img.png" alt="우리가 몰랐던 리얼장충" />
           </div>
-          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"> </a>
+          <a class="link-pin" href="/index.html" aria-label="close" style="top: 0%; height: 9%; left: 93%; width: 14%"><span class="blind">닫기</span></a>
         </section>
 
         <div class="sec2">
           <div class="img--block">
-            <img src="/assets/img/zone7_img/sec2_img01.png" alt="" />
+            <img src="/assets/img/zone7_img/sec2_img01.png" alt="장충동 플레이맵 코스소개" />
           </div>
 
           <div class="sec2-main--content">
-            <img src="/assets/img/zone7_img/sec2_main_img.png" alt="" />
+            <img src="/assets/img/zone7_img/sec2_main_img.png" alt="헌신의 자취를 따라 걷는 충절로드" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="장충단공원" style="top: 51%; height: 12%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="하우스 커피 앤 디저트" style="top: 51%; height: 12%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="유관순열사 동상" style="top: 64%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="3.1독립운동기념탑" style="top: 76.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="김용환 지사 동상" style="top: 76.6%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 89.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/FIN5KpjE" aria-label="코스 확인하기" style="top: 89.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec3">
           <div class="img--block">
-            <img src="/assets/img/zone7_img/sec3_main_img.png" alt="" />
+            <img src="/assets/img/zone7_img/sec3_main_img.png" alt="장충동의 진짜 매력과 만나고 싶다면" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="태극당" style="top: 46.6%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="종이나라 박물관" style="top: 46.6%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="뚱뚱이 할머니 집" style="top: 61%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="어페어커피 장충점" style="top: 74.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="경동교회" style="top: 74.6%; height: 12%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/G1mWjIj9" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
 
         <div class="sec4">
           <div class="img--block">
-            <img src="assets/img/zone7_img/sec4_main_img.png" alt="" />
+            <img src="/assets/img/zone7_img/sec4_main_img.png" alt="장충동을 핫하게 즐기는 한 끗 다른 방법" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="피우미 공간" style="top: 46.6%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="콘드에뻬뻬" style="top: 46.6%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="펄시커피" style="top: 61%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="조현화랑 서울" style="top: 74.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="신라호텔 더 라이브러리" style="top: 74.6%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/G9pZchIA" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec5">
           <div class="img--block">
-            <img src="assets/img/zone7_img/sec5_main_img.png" alt="" />
+            <img src="/assets/img/zone7_img/sec5_main_img.png" alt="오감을 깨우는 다산성곽길 바이브" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="다산성곽길" style="top: 46.6%; height: 13%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="aa ceramic studio" style="top: 46.6%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="유머감각" style="top: 61%; height: 12%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="카페 의외의조합" style="top: 74.6%; height: 12%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="다산성곽 도서관" style="top: 74.6%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/GUmYpLID" aria-label="코스 확인하기" style="top: 88.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec6">
           <div class="img--block">
-            <img src="assets/img/zone7_img/sec6_main_img.png" alt="" />
+            <img src="/assets/img/zone7_img/sec6_main_img.png" alt="장충동에 왔다면 이 정도는 걸어야 기본!" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="국립중앙극장" style="top: 48.6%; height: 14%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="장충체육관" style="top: 48.6%; height: 13%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="도치피자 장충" style="top: 63.6%; height: 13%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="프로스콘스 서울" style="top: 77.6%; height: 13%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="우리예술" style="top: 77.6%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 92.5%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/Gyp6SXTh" aria-label="코스 확인하기" style="top: 92.5%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="sec7">
           <div class="img--block">
-            <img src="assets/img/zone7_img/sec7_main_img.png" alt="" />
+            <img src="/assets/img/zone7_img/sec7_main_img.png" alt="장충동의 반전 매력 다이내믹 골목 투어" />
           </div>
-          <a class="link-pin" href="#link1" aria-label="성곽유구" style="top: 47.6%; height: 14%; left: 28%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="스타벅스 장충라운지R점" style="top: 47.6%; height: 14%; left: 71%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="신세계 음향 장충 녹음실" style="top: 62.6%; height: 14%; left: 50%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="장충동 작은마을" style="top: 77%; height: 13%; left: 29%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="우레카츠" style="top: 77%; height: 13%; left: 72%; width: 37%"> </a>
-          <a class="link-pin" href="#link1" aria-label="코스 확인하기" style="top: 92%; height: 3%; left: 50%; width: 77%"> </a>
+          <a class="link-pin" target="_blank" href="https://naver.me/FwjvuNWW" aria-label="코스 확인하기" style="top: 92%; height: 3%; left: 50%; width: 77%"> </a>
         </div>
         <div class="close--btn">
           <div class="img--block">
-            <img src="assets/img/zone7_img/close_img.png" alt="" />
+            <img src="/assets/img/zone7_img/close_img.png" alt="닫기" />
           </div>
-          <a class="link-pin close--link" href="#link1" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
+          <a class="link-pin close--link" href="/index.html" aria-label="닫기" style="top: 12%; height: 50%; left: 50%; width: 25%"> </a>
         </div>
       </div>
     </main>
